k8s/dotnet-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dotnet-app
  template:
    metadata:
      labels:
        app: dotnet-app
    spec:
      containers:
        - name: dotnet-app
          image: judgementhc/autosummarize-backend:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "125m"
          ports:
            - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: dotnet-service
spec:
  selector:
    app: dotnet-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
