k8s/vue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vue-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vue-app
  template:
    metadata:
      labels:
        app: vue-app
    spec:
      containers:
        - name: vue-app
          image: judgementhc/autosummarize-frontend:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "125m"
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: vue-service
spec:
  selector:
    app: vue-app
  ports:
    - protocol: TCP
      port: 5555
      targetPort: 80
