k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: my-app.local
      http:
        paths:
          # - path: /api/users
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: java-service
          #       port:
          #         number: 8080
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: dotnet-service
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vue-service
                port:
                  number: 81
